Source/JavaScriptCore/runtime/DateConversion.cpp
@@ -32,6 +32,7 @@
 
 #if OS(WINDOWS)
 #include <windows.h>
+#include <wtf/text/win/WCharStringExtras.h>
 #endif
 
 using namespace WTF;
@@ -108,7 +109,7 @@ String formatDateTime(const GregorianDateTime& t, DateTimeFormat format, bool as
             TIME_ZONE_INFORMATION timeZoneInformation;
             GetTimeZoneInformation(&timeZoneInformation);
             const WCHAR* winTimeZoneName = t.isDST() ? timeZoneInformation.DaylightName : timeZoneInformation.StandardName;
-            String timeZoneName(reinterpret_cast<const UChar*>(winTimeZoneName));
+            String timeZoneName = nullTerminatedWCharToString(winTimeZoneName);
 #else
             struct tm gtm = t;
             char timeZoneName[70];
